tests/ui/traits/next-solver/diagnostics/deeply-normalize-type-expectation.stderr
error[E0308]: mismatched types
  --> $DIR/deeply-normalize-type-expectation.rs:15:18
   |
LL |     needs::<i32>(());
   |     ------------ ^^ expected `i32`, found `()`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/deeply-normalize-type-expectation.rs:12:4
   |
LL | fn needs<T>(_: <T as Mirror>::Assoc) {}
   |    ^^^^^    -----------------------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
